--- a/real-estate-html-template/displayFavorite.ejs
+++ b/real-estate-html-template/displayFavorite.ejs
@@ -73,8 +73,7 @@
                             <a href="./getprofile" class="nav-item nav-link">Welcome, <%= user.name %></a>
                             <% } %>
                     </div>
-                    <a href="./getFavorites?isUser=<%= encodeURIComponent(JSON.stringify(user)) %>" class="nav-item nav-link">Wishlist</a>
-                    <!-- <a href="" class="btn btn-primary px-3 d-none d-lg-flex">Add Property</a> -->
+                    <a href="" class="nav-item nav-link">Wishlist</a>
                 </div>
             </nav>
         </div>
@@ -87,95 +86,79 @@
                 <div class="row g-0 gx-5 align-items-end">
                     <div class="col-lg-6">
                         <div class="text-start mx-auto mb-5 wow slideInLeft" data-wow-delay="0.1s">
-                            <h1 class="mb-3">Property Details</h1>
+                            <h1 class="mb-3">Your Wishlisted Propertys</h1>
                         </div>
                     </div>
                 </div>
                 <div class="tab-content">
-                    <% if(PropertyDetails) { %>
+                    <% if(property) { %>
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row g-4">
-                                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                                    <div class="property-item rounded overflow-hidden">
-                                        <div class="position-relative overflow-hidden">
-                                            <img class="img-fluid"
-                                                    src="<%= 'static/img/' + PropertyDetails.images[0] %>"
-                                                    alt="">
-                                            <div
-                                                class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
-                                                <%= PropertyDetails.featured %>
+                                <% for (let i=0; i < property.length; i++) { %>
+                                    <% const delay=i * 0.1 + 0.1; %>
+                                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="<%= delay %>s">
+                                            <div class="property-item rounded overflow-hidden">
+                                                <div class="position-relative overflow-hidden">
+                                                    <a href="./PropertyDetails?property=<%= encodeURIComponent(JSON.stringify(property[i])) %>"><img class="img-fluid"
+                                                            src="<%= 'static/img/' + property[i].images[0] %>"
+                                                            alt=""></a>
+                                                    <div
+                                                        class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">
+                                                        <%= property[i].featured %>
+                                                    </div>
+                                                    <div
+                                                        class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">
+                                                        <%= property[i].property_type %>
+                                                    </div>
+                                                </div>
+                                                <div class="p-4 pb-0">
+                                                    <div style="display: flex; justify-content: space-between; align-items: center;">
+                                                        <h5 class="text-primary mb-3"><%= property[i].price %></h5>
+                                                        <a href="./addToFavorite/<%= property[i].id %>" style="background-color: #f8f8f8;
+                                                        color: #e74c3c;
+                                                        border: none;
+                                                        padding: 10px 20px;
+                                                        border-radius: 5px;
+                                                        cursor: pointer;
+                                                        font-size: 16px;
+                                                        transition: background-color 0.3s ease;
+                                                        float: right;
+                                                        text-decoration: none;" onmouseover="this.style.backgroundColor='#e74c3c'; 
+                                                        this.style.color='#fff';"
+                                                        onmouseout="this.style.backgroundColor='#f8f8f8'; 
+                                                        this.style.color='#e74c3c';">
+                                                            <i style="margin-right: 5px;" class="fas fa-heart"></i> Add to Wishlist
+                                                        </a>
+                                                    </div>
+                                                    <a class="d-block h5 mb-2" href="">
+                                                        <%= property[i].description %>
+                                                    </a>
+                                                    <p><i class="fa fa-map-marker-alt text-primary me-2"></i>
+                                                        <%= property[i].house_no %>, <%= property[i].city %>,
+                                                                <%= property[i].country %>
+                                                    </p>
+                                                </div>
+                                                <div class="d-flex border-top">
+                                                    <small class="flex-fill text-center border-end py-2"><i
+                                                            class="fa fa-ruler-combined text-primary me-2"></i>
+                                                        <%= property[i].sqrmeter %> Sqmeter
+                                                    </small>
+                                                    <small class="flex-fill text-center border-end py-2"><i
+                                                            class="fa fa-bed text-primary me-2"></i>
+                                                        <%= property[i].bed %> Bed
+                                                    </small>
+                                                    <small class="flex-fill text-center py-2"><i
+                                                            class="fa fa-bath text-primary me-2"></i>
+                                                        <%= property[i].bath %> Bath
+                                                    </small>
+                                                </div>
                                             </div>
-                                            <div
-                                                class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">
-                                                <%= PropertyDetails.property_type %>
-                                            </div>
                                         </div>
-                                        <div class="p-4 pb-0">
-                                            <h5 class="text-primary mb-3">
-                                                <%= PropertyDetails.price %>
-                                            </h5>
-                                            <a class="d-block h5 mb-2" href="">
-                                                <%= PropertyDetails.description %>
-                                            </a>
-                                            <p><i class="fa fa-map-marker-alt text-primary me-2"></i>
-                                                <%= PropertyDetails.house_no %>, <%= PropertyDetails.street %>, <%= PropertyDetails.area %>
-                                                <%= PropertyDetails.city %>, <%= PropertyDetails.state %>, <%= PropertyDetails.country %>,
-                                                <%= PropertyDetails.zipCode %>
-                                            </p>
-                                        </div>
-                                        <div class="d-flex border-top">
-                                            <small class="flex-fill text-center border-end py-2"><i
-                                                    class="fa fa-ruler-combined text-primary me-2"></i>
-                                                <%= PropertyDetails.sqrmeter %> Sqmeter
-                                            </small>
-                                            <small class="flex-fill text-center border-end py-2"><i
-                                                    class="fa fa-bed text-primary me-2"></i>
-                                                <%= PropertyDetails.bed %> Bed
-                                            </small>
-                                            <small class="flex-fill text-center py-2"><i
-                                                    class="fa fa-bath text-primary me-2"></i>
-                                                <%= PropertyDetails.bath %> Bath
-                                            </small>
-                                        </div>
-                                        <% if(owner) { %>
-                                            <div class="p-4 pb-0">
-                                                <h6 class="text-primary mb-3">
-                                                    Owner Name: <%= owner.name %>
-                                                </h6>
-                                                <h6 class="text-primary mb-3">
-                                                    Owner Email: <%= owner.email %>
-                                                </h6>
-                                                <h6 class="text-primary mb-3">
-                                                    Owner Phone No: <%= owner.mobile_no %>
-                                                </h6>
-                                            </div>
-                                        <% } %>
-                                        <div class="p-4 pb-0">
-                                            <h5 class="text-primary mb-3">
-                                                <%= PropertyDetails.property_status %>
-                                            </h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                                <% } %>
                     <% } %>
-                </div>
+                </div> 
             </div>
         </div>
-        <% if(PropertyDetails.property_status == "UNSOLD") { %>
-            <div>
-                <button style="font-weight: bold;
-                font-size: 20px;" class="btn btn-dark border-0 w-100 py-3" type="submit"
-                id="buyButton">Buy Now</button>
-            </div>
-        <% } %>
-
-        <script>
-            document.getElementById("buyButton").addEventListener("click", function() {
-                window.location.href = "./addBuyer/<%= PropertyDetails.id %>";
-            });
-        </script>
 
 
         <!-- Footer Start -->
