--- a/real-estate-html-template/index.ejs
+++ b/real-estate-html-template/index.ejs
@@ -272,6 +272,9 @@
                                     </div>
                                     <div class="p-4 pb-0">
                                         <h5 class="text-primary mb-3">$12,345</h5>
+                                        <a href="" class="wishlist-button">
+                                            <i class="fas fa-heart"></i> Add to Wishlist
+                                        </a>
                                         <a class="d-block h5 mb-2" href="">Golden Urban House For Sell</a>
                                         <p><i class="fa fa-map-marker-alt text-primary me-2"></i>123 Street, New York,
                                             USA</p>
@@ -299,6 +302,9 @@
                                     </div>
                                     <div class="p-4 pb-0">
                                         <h5 class="text-primary mb-3">$12,345</h5>
+                                        <a href="" class="wishlist-button">
+                                            <i class="fas fa-heart"></i> Add to Wishlist
+                                        </a>
                                         <a class="d-block h5 mb-2" href="">Golden Urban House For Sell</a>
                                         <p><i class="fa fa-map-marker-alt text-primary me-2"></i>123 Street, New York,
                                             USA</p>
@@ -326,6 +332,9 @@
                                     </div>
                                     <div class="p-4 pb-0">
                                         <h5 class="text-primary mb-3">$12,345</h5>
+                                        <a href="" class="wishlist-button">
+                                            <i class="fas fa-heart"></i> Add to Wishlist
+                                        </a>
                                         <a class="d-block h5 mb-2" href="">Golden Urban House For Sell</a>
                                         <p><i class="fa fa-map-marker-alt text-primary me-2"></i>123 Street, New York,
                                             USA</p>
@@ -353,6 +362,9 @@
                                     </div>
                                     <div class="p-4 pb-0">
                                         <h5 class="text-primary mb-3">$12,345</h5>
+                                        <a href="" class="wishlist-button">
+                                            <i class="fas fa-heart"></i> Add to Wishlist
+                                        </a>
                                         <a class="d-block h5 mb-2" href="">Golden Urban House For Sell</a>
                                         <p><i class="fa fa-map-marker-alt text-primary me-2"></i>123 Street, New York,
                                             USA</p>
@@ -379,7 +391,24 @@
                                             Home</div>
                                     </div>
                                     <div class="p-4 pb-0">
-                                        <h5 class="text-primary mb-3">$12,345</h5>
+                                        <div style="display: flex; justify-content: space-between; align-items: center;">
+                                            <h5 class="text-primary mb-3">$12,345</h5>
+                                            <a href="" style="background-color: #f8f8f8;
+                                            color: #e74c3c;
+                                            border: none;
+                                            padding: 10px 20px;
+                                            border-radius: 5px;
+                                            cursor: pointer;
+                                            font-size: 16px;
+                                            transition: background-color 0.3s ease;
+                                            float: right;
+                                            text-decoration: none;" onmouseover="this.style.backgroundColor='#e74c3c'; 
+                                            this.style.color='#fff';"
+                                            onmouseout="this.style.backgroundColor='#f8f8f8'; 
+                                            this.style.color='#e74c3c';">
+                                                <i style="margin-right: 5px;" class="fas fa-heart"></i> Add to Wishlist
+                                            </a>
+                                        </div>
                                         <a class="d-block h5 mb-2" href="">Golden Urban House For Sell</a>
                                         <p><i class="fa fa-map-marker-alt text-primary me-2"></i>123 Street, New York,
                                             USA</p>
@@ -407,6 +436,9 @@
                                     </div>
                                     <div class="p-4 pb-0">
                                         <h5 class="text-primary mb-3">$12,345</h5>
+                                        <a href="" class="wishlist-button">
+                                            <i class="fas fa-heart"></i> Add to Wishlist
+                                        </a>
                                         <a class="d-block h5 mb-2" href="">Golden Urban House For Sell</a>
                                         <p><i class="fa fa-map-marker-alt text-primary me-2"></i>123 Street, New York,
                                             USA</p>
