--- a/real-estate-html-template/property-list1.ejs
+++ b/real-estate-html-template/property-list1.ejs
@@ -172,7 +172,7 @@
                                         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="<%= delay %>s">
                                             <div class="property-item rounded overflow-hidden">
                                                 <div class="position-relative overflow-hidden">
-                                                    <a href="./PropertyDetails?property=<%= encodeURIComponent(JSON.stringify(property[i])) %>"><img class="img-fluid"
+                                                    <a href="./PropertyDetails"><img class="img-fluid"
                                                             src="<%= 'static/img/' + property[i].images[0] %>"
                                                             alt=""></a>
                                                     <div
@@ -185,9 +185,27 @@
                                                     </div>
                                                 </div>
                                                 <div class="p-4 pb-0">
-                                                    <h5 class="text-primary mb-3">
+                                                    <!-- <h5 class="text-primary mb-3">
                                                         <%= property[i].price %>
-                                                    </h5>
+                                                    </h5> -->
+                                                    <div style="display: flex; justify-content: space-between; align-items: center;">
+                                                        <h5 class="text-primary mb-3"><%= property[i].price %></h5>
+                                                        <a href="./addToFavorite" style="background-color: #f8f8f8;
+                                                        color: #e74c3c;
+                                                        border: none;
+                                                        padding: 10px 20px;
+                                                        border-radius: 5px;
+                                                        cursor: pointer;
+                                                        font-size: 16px;
+                                                        transition: background-color 0.3s ease;
+                                                        float: right;
+                                                        text-decoration: none;" onmouseover="this.style.backgroundColor='#e74c3c'; 
+                                                        this.style.color='#fff';"
+                                                        onmouseout="this.style.backgroundColor='#f8f8f8'; 
+                                                        this.style.color='#e74c3c';">
+                                                            <i style="margin-right: 5px;" class="fas fa-heart"></i> Add to Wishlist
+                                                        </a>
+                                                    </div>
                                                     <a class="d-block h5 mb-2" href="">
                                                         <%= property[i].description %>
                                                     </a>
