--- a/real-estate-html-template/index.ejs
+++ b/real-estate-html-template/index.ejs
@@ -65,10 +65,10 @@
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Property</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="./getAllPropertys" class="dropdown-item">Property List</a>
-                                <a href="./property-type" class="dropdown-item">Property Type</a>
+                                <a href="./property-type1" class="dropdown-item">Property Type</a>
                             </div>
                         </div>
-                        <a href="./contact" class="nav-item nav-link">Contact</a>
+                        <a href="./contact1" class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="./getUserProperty" class="btn btn-primary px-3 d-none d-lg-flex">Add Property</a>
                 </div>
