--- a/real-estate-html-template/property-list1.ejs
+++ b/real-estate-html-template/property-list1.ejs
@@ -172,7 +172,7 @@
                                         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="<%= delay %>s">
                                             <div class="property-item rounded overflow-hidden">
                                                 <div class="position-relative overflow-hidden">
-                                                    <a href="./PropertyDetails"><img class="img-fluid"
+                                                    <a href="./PropertyDetails?property=<%= encodeURIComponent(JSON.stringify(property[i])) %>"><img class="img-fluid"
                                                             src="<%= 'static/img/' + property[i].images[0] %>"
                                                             alt=""></a>
                                                     <div
