--- a/real-estate-html-template/displayFavorite.ejs
+++ b/real-estate-html-template/displayFavorite.ejs
@@ -72,8 +72,15 @@
                         <% if (user) { %>
                             <a href="./getprofile" class="nav-item nav-link">Welcome, <%= user.name %></a>
                             <% } %>
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Feature</a>
+                                <div class="dropdown-menu rounded-0 m-0">
+                                    <a href="" class="dropdown-item">Wishlist</a>
+                                    <a href="./getBuyHistory?isUser=<%= encodeURIComponent(JSON.stringify(user)) %>" class="dropdown-item">Buy History</a>
+                                </div>
+                            </div>
                     </div>
-                    <a href="" class="nav-item nav-link">Wishlist</a>
+                    <!-- <a href="" class="nav-item nav-link">Wishlist</a> -->
                 </div>
             </nav>
         </div>
@@ -114,7 +121,7 @@
                                                 <div class="p-4 pb-0">
                                                     <div style="display: flex; justify-content: space-between; align-items: center;">
                                                         <h5 class="text-primary mb-3"><%= property[i].price %></h5>
-                                                        <a href="./addToFavorite/<%= property[i].id %>" style="background-color: #f8f8f8;
+                                                        <a href="./removeFromFavorite/<%= property[i].id %>" style="background-color: #f8f8f8;
                                                         color: #e74c3c;
                                                         border: none;
                                                         padding: 10px 20px;
@@ -127,7 +134,7 @@
                                                         this.style.color='#fff';"
                                                         onmouseout="this.style.backgroundColor='#f8f8f8'; 
                                                         this.style.color='#e74c3c';">
-                                                            <i style="margin-right: 5px;" class="fas fa-heart"></i> Add to Wishlist
+                                                            <i style="margin-right: 5px;" class="fas fa-heart"></i> Remove From Wishlist
                                                         </a>
                                                     </div>
                                                     <a class="d-block h5 mb-2" href="">
