--- a/real-estate-html-template/property-history.ejs
+++ b/real-estate-html-template/property-history.ejs
@@ -77,7 +77,7 @@
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Feature</a>
                                 <div class="dropdown-menu rounded-0 m-0">
                                     <a href="./getFavorites?isUser=<%= encodeURIComponent(JSON.stringify(user)) %>" class="dropdown-item">Wishlist</a>
-                                    <a href="./getBuyHistory?isUser=<%= encodeURIComponent(JSON.stringify(user)) %>" class="dropdown-item">Buy History</a>
+                                    <a href="" class="dropdown-item">Buy History</a>
                                 </div>
                             </div>
                     </div>
