--- a/real-estate-html-template/home.ejs
+++ b/real-estate-html-template/home.ejs
@@ -260,7 +260,7 @@
 
 
         <!-- Property List Start -->
-        <div class="container-xxl py-5">
+        <!-- <div class="container-xxl py-5">
             <div class="container">
                 <div class="row g-0 gx-5 align-items-end">
                     <div class="col-lg-6">
@@ -781,7 +781,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Property List End -->
 
         <!-- Footer Start -->
