--- a/real-estate-html-template/property-history.ejs
+++ b/real-estate-html-template/property-history.ejs
@@ -109,7 +109,7 @@
 
 
         <!-- Search Start -->
-        <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
+        <!-- <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
             <div class="container">
                 <h5 class="mb-3">Looking for a property?</h5>
                 <form action="/searchProperty" method="POST">
@@ -163,7 +163,7 @@
                     });
                 </script>
             </div>
-        </div>
+        </div> -->
         <!-- Search End -->
 
 
@@ -174,7 +174,7 @@
                     <div class="row g-0 gx-5 align-items-end">
                         <div class="col-lg-6">
                             <div class="text-start mx-auto mb-5 wow slideInLeft" data-wow-delay="0.1s">
-                                <h1 class="mb-3">Your Property's</h1>
+                                <h1 class="mb-3">Your Buy History</h1>
                                 <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero
                                     ipsum sit eirmod sit diam justo sed rebum.</p>
                             </div>
