--- a/real-estate-html-template/message8.ejs
+++ b/real-estate-html-template/message8.ejs
@@ -41,7 +41,7 @@
             </div>
             <div id='lower-side'>
               <p id='message'>
-                Congratulations, your property has been successfully Sold To <%= user.name %>.
+                Congratulations, your property has been Sold Out Successfully.
               </p>
               <a href="/" id="contBtn">Continue</a>
             </div>
