--- a/real-estate-html-template/addProperty.ejs
+++ b/real-estate-html-template/addProperty.ejs
@@ -138,14 +138,14 @@
                 <label for="description">Bath</label>
                 <input type="number" id="bath" name="bath" rows="4" required>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="description">Property Latitude</label>
                 <input type="number" id="latitude" name="latitude" rows="4" step="0.0000001" required>
             </div>
             <div class="form-group">
                 <label for="description">Property Longitude</label>
                 <input type="number" id="longitude" name="longitude" rows="4" step="0.0000001" required>
-            </div>
+            </div> -->
             <div class="button">
                 <button type="submit" id="addProperty" >Save & Next</button>
             </div>
