--- a/real-estate-html-template/property.ejs
+++ b/real-estate-html-template/property.ejs
@@ -227,6 +227,11 @@
                                                         <%= property[i].bath %> Bath
                                                     </small>
                                                 </div>
+                                                <div class="p-4 pb-0">
+                                                    <h5 class="text-primary mb-3">
+                                                        <%= property[i].property_status %>
+                                                    </h5>
+                                                </div>
                                             </div>
                                         </div>
                                 <% } %>
