--- a/real-estate-html-template/resetPass.ejs
+++ b/real-estate-html-template/resetPass.ejs
@@ -54,7 +54,7 @@
             <input type="email" name="email" placeholder="Email" required>
             <input type="text" name="otp" placeholder="Enter OTP" required>
             <input type="password" name="newPassword" placeholder="New Password" required>
-            <button type="submit" value="Reset Password" id="resetButton"></button>
+            <button type="submit" value="Reset Password" id="resetButton">Reset Password</button>
         </form>
         <script>
             document.getElementById("resetButton").addEventListener("click", function() {
